--- a/笔记.md
+++ b/笔记.md
@@ -78,7 +78,7 @@ function throwError(msg): never {
     throw new Error(msg);
 }
 ```
-- 字面量类型：使用一个值进行约束
+- 字面量类型：使用一个值进行约束(一般不太会使用这种方式)
 ```javascript
 let sex: "male" | "female";
 sex = "male";
@@ -91,6 +91,8 @@ user = {
     name: 'cjx',
     age: 18
 };
+
+let arr: []; // 只能是空数组
 ```
 - 元祖类型（Tuple）：一个固定长度的数组，并且数组中每一项类型确定
 ```javascript
